[package]
name = "davy-jones"
version = "0.1.0"
authors = ["Wendell Liu <cuk.bas@gmail.com>"]
edition = "2018"

[dependencies]
hyper = "0.12"
pretty_env_logger = "0.3.0"
jsonwebtoken = "6"
serde_derive = "1"
serde = "1"
serde_json = "1.0"
dotenv = "0.14.0"
chrono = { version = "0.4", features = ["serde"] }

[features]
production = []