[package]
name = "davy-jones"
version = "0.1.0"
authors = ["Wendell Liu <cuk.bas@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.1"
rocket_contrib = "0.4.1"
pretty_env_logger = "0.3.0"
jsonwebtoken = "5.0.1"
serde_derive = "1"
serde = "1"
serde_json = "1.0"
dotenv = "0.14.0"
chrono = { version = "0.4", features = ["serde"] }
handlebars = "1.1.0"

[features]
production = []